<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.playback.soundrec.ui.login.LoginActivityViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:viewBindingIgnore="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.playback.soundrec.ui.main.MainActivity">

        <LinearLayout
            android:layout_margin="@dimen/spacing_double"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/waveform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="@dimen/spacing_double"
                android:layout_marginEnd="@dimen/spacing_double"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:textColor="@color/text_primary_light"
                android:textSize="@dimen/text_xlarge"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_user"
                android:layout_marginTop="@dimen/spacing_normal"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text.NormalLabel"
                    android:text="@{viewModel.username}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text.NormalLabel"
                    android:text="@{viewModel.password}"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_marginTop="@dimen/spacing_normal"
                style="@style/Widget.RaisedButton"
                android:id="@+id/dialog_details_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::login}"
                android:textSize="@dimen/text_normal"
                android:paddingStart="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:paddingRight="@dimen/spacing_normal"
                android:text="@string/login" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
