<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2018 Dmytro Ponomarenko
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

            <variable
                name="viewModel"
                type="com.playback.soundrec.ui.settings.SettingActivityViewModel" />

    </data>

    <ScrollView
        tools:viewBindingIgnore="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:layout_gravity="start"
                    android:onClick="@{viewModel::onBackClick}"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:padding="@dimen/spacing_normal"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    style="@style/Text.SectionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text.NormalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_sample_to_server"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:drawableStart="@drawable/outline_send_and_archive_24"
                    android:drawablePadding="@dimen/spacing_normal" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sendSampleToServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/spacing_xsmall" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text.NormalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delay"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:drawableStart="@drawable/outline_more_time_24"
                    android:drawablePadding="@dimen/spacing_normal" />

                <EditText
                    style="@style/Text.NormalLabel"
                    android:id="@+id/tv_delay"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:layout_marginEnd="@dimen/spacing_xsmall"/>

<!--                <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                    android:id="@+id/sendSampleToServer"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center_vertical"-->
<!--                    android:layout_marginEnd="@dimen/spacing_xsmall" />-->
            </LinearLayout>

            <com.playback.soundrec.widget.SettingView
                android:id="@+id/setting_recording_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.playback.soundrec.widget.SettingView
                android:id="@+id/setting_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/txtAbout"
                style="@style/Text.NormalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="bottom|center"
                android:textSize="@dimen/text_xmedium"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:selectableItemBackground"
                android:paddingStart="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_normal"
                android:paddingTop="@dimen/spacing_xsmall"
                android:paddingBottom="@dimen/spacing_xsmall"
                android:drawablePadding="@dimen/spacing_double" />

        </LinearLayout>
    </ScrollView>
</layout>